--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Infinite Scroll</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=scholarshipsethiopia.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="stylel.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>"Hello World"</h1>
-
+    <h1>Unsplash API - Infinite Scroll</h1>
+    <div class="loader" id="loader">
+        <img src="loader.svg" alt="loader">
+    </div>
+    <div class="image-container" id="image-container">
+    </div>
     <script src="script.js"></script>
 </body>
 
